Add number and calc button with delete function

--- a/index.html
+++ b/index.html
@@ -16,32 +16,32 @@
             </div>
             <div class="keyboard">
                 <div class="line">
-                    <button id="func-btn" onclick="deleteOne()">DE</button>
+                    <button id="func-btn" onclick="deleteOne()">⌫</button>
                     <button id="func-btn" onclick="clearDisplay()">AC</button>
                     <button id="func-btn">%</button>
-                    <button id="calcu-btn">/</button>
+                    <button id="calcu-btn"onclick="addPad('÷')">÷</button>
                 </div>
                 <div class="line">
                     <button onclick="addPad(7)">7</button>
                     <button onclick="addPad(8)">8</button>
                     <button onclick="addPad(9)">9</button>
-                    <button id="calcu-btn">x</button>
+                    <button id="calcu-btn" onclick="addPad('x')">x</button>
                 </div>
                 <div class="line">
                     <button onclick="addPad(4)">4</button>
                     <button onclick="addPad(5)">5</button>
                     <button onclick="addPad(6)">6</button>
-                    <button id="calcu-btn">-</button>
+                    <button id="calcu-btn" onclick="addPad('-')">-</button>
                 </div>
                 <div class="line">
                     <button onclick="addPad(1)">1</button>
                     <button onclick="addPad(2)">2</button>
                     <button onclick="addPad(3)">3</button>
-                    <button id="calcu-btn">+</button>
+                    <button id="calcu-btn" onclick="addPad('+')">+</button>
                 </div>
                 <div class="line">
                     <button>+/-</button>
-                    <button>0</button>
+                    <button onclick="addPad(0)">0</button>
                     <button>,</button>
                     <button id="calcu-btn">=</button>
                 </div>
