new notification for unknown function

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                     <button id="calcu-btn" onclick="addPad('+')">+</button>
                 </div>
                 <div class="line">
-                    <button>+/-</button>
+                    <button onclick="comingSoon()">+/-</button>
                     <button onclick="addPad(0)">0</button>
-                    <button>,</button>
+                    <button onclick="comingSoon()">,</button>
                     <button id="calcu-btn" onclick="calculate()">=</button>
                 </div>
             </div>
