Full feature on the Calculator

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="line">
                     <button onclick="signNum()">+/-</button>
                     <button onclick="addPad(0)">0</button>
-                    <button onclick="comingSoon()">,</button>
+                    <button onclick="addPad('.')">,</button>
                     <button id="calcu-btn" onclick="calculate()">=</button>
                 </div>
             </div>
