Delete icon to DEL

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="keyboard">
                 <div class="line">
-                    <button id="func-btn" class="backspace" onclick="deleteOne()">⌫</button>
+                    <button id="func-btn" class="backspace" onclick="deleteOne()">DEL</button>
                     <button id="func-btn" onclick="clearDisplay()">AC</button>
                     <button id="func-btn" onclick="addPad('%')">%</button>
                     <button id="calcu-btn"onclick="addPad('÷')">÷</button>
