--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
-    <link rel="stylesheet" href="safariSupport.css">
+    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="safariSupport.css"> -->
 
     <script src="main.js" defer></script>
 </head>
@@ -17,7 +17,7 @@
             </div>
             <div class="keyboard">
                 <div class="line">
-                    <button id="func-btn" class="backspace" onclick="deleteOne()">DEL</button>
+                    <button id="func-btn" class="backspace" onclick="deleteOne()">⌫</button>
                     <button id="func-btn" onclick="clearDisplay()">AC</button>
                     <button id="func-btn" onclick="addPad('%')">%</button>
                     <button id="calcu-btn"onclick="addPad('÷')">÷</button>
